--- a/themes/maupassant/source/css/style.scss
+++ b/themes/maupassant/source/css/style.scss
@@ -16,13 +16,15 @@ html, button, input, select, textarea,
 .MJXc-TeX-unknown-R,
 .pure-g [class *= "pure-u"] {
     /* Set your content font stack here: */
-    font-family: "PingFangSC-Regular", Helvetica, "Helvetica Neue", "Segoe UI", "Hiragino Sans GB", "Source Han Sans CN", "Microsoft YaHei", "STHeiti", "WenQuanYi Micro Hei", sans-serif !important;
+    font-family: Baskerville, Georgia, "Liberation Serif", Kaiti SC, "PingFangSC-Regular", Helvetica, "Helvetica Neue", "Segoe UI", "Hiragino Sans GB", "Source Han Sans CN", "Microsoft YaHei", "STHeiti", "WenQuanYi Micro Hei", sans-serif !important;
+    // font-family: Baskerville, Georgia, "Liberation Serif", Kaiti SC;
 }
 
 body {
     background-color: #FFF;
     color: #444;
-    font-family: "TIBch", "Classic Grotesque W01", "Helvetica Neue", Arial, "Hiragino Sans GB", "STHeiti", "Microsoft YaHei", "WenQuanYi Micro Hei", SimSun, sans-serif;
+    // font-family: Baskerville, Georgia, "Liberation Serif", Kaiti SC, "TIBch", "Classic Grotesque W01", "Helvetica Neue", Arial, "Hiragino Sans GB", "STHeiti", "Microsoft YaHei", "WenQuanYi Micro Hei", SimSun, sans-serif;
+    font-family: Baskerville, Georgia, "Liberation Serif", Kaiti SC;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     font-size: 14px;
@@ -71,7 +73,8 @@ div {
             overflow: hidden;
         }
         #logo {
-            font: bold 38px/1.12 "Times New Roman", Georgia, Times, sans-serif;
+            // font: bold 38px/1.12 Baskerville,Georgia, "Liberation Serif", Kaiti SC, "Times New Roman", Georgia, Times, sans-serif;
+            font: bold 38px/1.12 Baskerville,Georgia, "Liberation Serif", Kaiti SC;
             color: #555;
             span, &:hover {
                 color: #777;
@@ -194,7 +197,8 @@ div {
         margin: 0;
         color: #555;
         text-align: left;
-        font: bold 25px/1.1 "ff-tisa-web-pro", Cambria, "Times New Roman", Georgia, Times, sans-serif;
+        // font: bold 25px/1.1 Baskerville, Georgia, "Liberation Serif", Kaiti SC, "ff-tisa-web-pro", Cambria, "Times New Roman", Georgia, Times, sans-serif;
+        font: bold 25px/1.1 Baskerville, Georgia, "Liberation Serif", Kaiti SC;
         a {
             color: #555;
         }
@@ -877,7 +881,7 @@ figure.highlight,
     .code,
     .tag {
         background-color: inherit;
-        font-family: Menlo, Consolas, monospace;
+        font-family: "cascadia code", Menlo, Consolas, monospace;
         border:      none;
         padding:     0;
         margin:      0;
