--- a/themes/maupassant/source/css/style.scss
+++ b/themes/maupassant/source/css/style.scss
@@ -16,7 +16,7 @@ html, button, input, select, textarea,
 .MJXc-TeX-unknown-R,
 .pure-g [class *= "pure-u"] {
     /* Set your content font stack here: */
-    font-family: Baskerville, Georgia, "Liberation Serif", Kaiti SC, "PingFangSC-Regular", Helvetica, "Helvetica Neue", "Segoe UI", "Hiragino Sans GB", "Source Han Sans CN", "Microsoft YaHei", "STHeiti", "WenQuanYi Micro Hei", sans-serif !important;
+    font-family: cursive, "PingFangSC-Regular", Helvetica, "Helvetica Neue", "Segoe UI", "Hiragino Sans GB", "Source Han Sans CN", "Microsoft YaHei", "STHeiti", "WenQuanYi Micro Hei", sans-serif !important;
     // font-family: Baskerville, Georgia, "Liberation Serif", Kaiti SC;
 }
 
@@ -24,7 +24,7 @@ body {
     background-color: #FFF;
     color: #444;
     // font-family: Baskerville, Georgia, "Liberation Serif", Kaiti SC, "TIBch", "Classic Grotesque W01", "Helvetica Neue", Arial, "Hiragino Sans GB", "STHeiti", "Microsoft YaHei", "WenQuanYi Micro Hei", SimSun, sans-serif;
-    font-family: Baskerville, Georgia, "Liberation Serif", Kaiti SC;
+    font-family: cursive, "PingFangSC-Regular", Helvetica, "Helvetica Neue", "Segoe UI", "Hiragino Sans GB", "Source Han Sans CN", "Microsoft YaHei", "STHeiti", "WenQuanYi Micro Hei", sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     font-size: 14px;
@@ -74,7 +74,7 @@ div {
         }
         #logo {
             // font: bold 38px/1.12 Baskerville,Georgia, "Liberation Serif", Kaiti SC, "Times New Roman", Georgia, Times, sans-serif;
-            font: bold 38px/1.12 Baskerville,Georgia, "Liberation Serif", Kaiti SC;
+            font: bold 38px/1.12 cursive, "Times New Roman", Georgia, Times, sans-serif;
             color: #555;
             span, &:hover {
                 color: #777;
@@ -198,7 +198,7 @@ div {
         color: #555;
         text-align: left;
         // font: bold 25px/1.1 Baskerville, Georgia, "Liberation Serif", Kaiti SC, "ff-tisa-web-pro", Cambria, "Times New Roman", Georgia, Times, sans-serif;
-        font: bold 25px/1.1 Baskerville, Georgia, "Liberation Serif", Kaiti SC;
+        font: bold 25px/1.1 cursive, "ff-tisa-web-pro", Cambria, "Times New Roman", Georgia, Times, sans-serif;
         a {
             color: #555;
         }
@@ -289,7 +289,7 @@ div {
                 margin: 0 5px;
                 padding: 0 5px;
                 background: #f7f8f8;
-                font-family: Menlo, Consolas, monospace !important;
+                font-family: "cascadia code", Menlo, Consolas, monospace !important;
             }
             a {
                 color: #01579f;
@@ -331,7 +331,7 @@ div {
                 margin: 0 5px;
                 padding: 0px 5px;
                 background: #f7f8f8;
-                font-family: Menlo, Consolas, monospace !important;
+                font-family: "cascadia code", Menlo, Consolas, monospace !important;
             }
             a {
                 color: #01579f;
@@ -940,7 +940,7 @@ figure.highlight,
 .gist {
     .line,
     .line-number {
-        font-family: Menlo, Consolas, monospace;
+        font-family: "cascadia code", Menlo, Consolas, monospace;
         font-size:   1em;
         margin:      0 0 5px 0;
     }
